manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-openfga
  namespace: test01
  labels:
    helm.sh/chart: openfga-0.2.27
    app.kubernetes.io/name: openfga
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v1.8.9"
    app.kubernetes.io/managed-by: Helm
  annotations:
    # Gateway를 통해 노출되는 포트는 8080 뿐이므로, NEG 설정도 8080에 대해서만 지정합니다.
    cloud.google.com/neg: '{"exposed_ports": {"8080":{}}}'
spec:
  type: ClusterIP
  ports:
    - name: grpc
      port: 8081
      targetPort: grpc
      protocol: TCP
      #appProtocol: kubernetes.io/h2c # 클러스터 내 H2C 통신을 한다면 명시
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
      appProtocol: HTTP # Gateway에서 이 포트를 사용하므로 appProtocol 필요
    - name: metrics
      port: 2112
      targetPort: metrics
      protocol: TCP
      #appProtocol: HTTP # Prometheus 등이 HTTP로 메트릭을 수집한다면 명시
  selector:
    app.kubernetes.io/name: openfga
    app.kubernetes.io/instance: release-name
